--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -24,28 +24,28 @@
         <a class="nav-link" href="../index.html">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="./about.html">About</a>
+        <a class="nav-link" href="../about.html">About</a>
       </li>
       <li class="nav-item dropdown">
       <a class="nav-link dropdown-toggle" id="navbardrop" data-toggle="dropdown">
         Weekly projects
       </a>
       <div class="dropdown-menu">
-        <a class="dropdown-item" href="./01_intro/index.html">Week 1</a>
-        <a class="dropdown-item" href="./02/index.html">Week 2</a>
-        <a class="dropdown-item" href="./03/index.html">Week 3</a>
-        <a class="dropdown-item" href="./04/index.html">Week 4</a>
-        <a class="dropdown-item" href="./05/index.html">Week 5</a>
-        <a class="dropdown-item" href="./06/index.html">Week 6</a>
-        <a class="dropdown-item" href="./07/index.html">Week 7</a>
-        <a class="dropdown-item" href="./08/index.html">Week 8</a>
-        <a class="dropdown-item" href="./09/index.html">Week 9</a>
-        <a class="dropdown-item" href="./10/index.html">Week 10</a>
-        <a class="dropdown-item" href="./11/index.html">Week 11</a>
-        <a class="dropdown-item" href="./12/index.html">Week 12</a>
-        <a class="dropdown-item" href="./13/index.html">Week 13</a>
-        <a class="dropdown-item" href="./14/index.html">Week 14</a>
-        <a class="dropdown-item" href="./FinalProject/index.html">Final Project</a>
+        <a class="dropdown-item" href="../01_intro/index.html">Week 1</a>
+        <a class="dropdown-item" href="../02/index.html">Week 2</a>
+        <a class="dropdown-item" href="../03/index.html">Week 3</a>
+        <a class="dropdown-item" href="../04/index.html">Week 4</a>
+        <a class="dropdown-item" href="../05/index.html">Week 5</a>
+        <a class="dropdown-item" href="../06/index.html">Week 6</a>
+        <a class="dropdown-item" href="../07/index.html">Week 7</a>
+        <a class="dropdown-item" href="../08/index.html">Week 8</a>
+        <a class="dropdown-item" href="../09/index.html">Week 9</a>
+        <a class="dropdown-item" href="../10/index.html">Week 10</a>
+        <a class="dropdown-item" href="../11/index.html">Week 11</a>
+        <a class="dropdown-item" href="../12/index.html">Week 12</a>
+        <a class="dropdown-item" href="../13/index.html">Week 13</a>
+        <a class="dropdown-item" href="../14/index.html">Week 14</a>
+        <a class="dropdown-item" href="../FinalProject/index.html">Final Project</a>
       </div>
     </ul>
   </div>
@@ -63,6 +63,10 @@
 Here is an image: 
 
 ![image of embroidery](./01.png)
+
+<img src="./01.png" 
+     width="100" 
+     height="100" />
 
 And here is a	[link](../index.html).
 
