--- a/07/index.html
+++ b/07/index.html
@@ -2,20 +2,55 @@
 <html lang="en">
 
 <title>PS70: Intro to Digital Fabrication </title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
-<link href="../style.css" rel="stylesheet">
+<head>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+
+<!-- Source: Introduction Bootstrap -->
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="image.css">
 
 
-<nav class="navbar navbar-expand-sm navbar-light bg-light">
-  <div style="align-items: left; justify-content:left;" class="container-fluid">
-    <h3 class="nav-title"> PS70: Intro to Digital Fabrication</h3>
-    <div class="navbar-nav">
-      <h4></h4>
-      <h4><a class="nav-link" href="../index.html">Home</a></h4>
-      <h4><a class="nav-link" href="../about.html">About</a></h4>
-    </div>
+<!--/*Source: Navbar Bootstrsap -->
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+  <span class="navbar-brand mb-0 h1"> PS 70: Intro to Digital Fabrication</span>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="collapse" >
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="collapse">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="../index.html">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="../about.html">About</a>
+      </li>
+      <li class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle" id="navbardrop" data-toggle="dropdown">
+        Weekly projects
+      </a>
+      <div class="dropdown-menu">
+        <a class="dropdown-item" href="../01_intro/index.html">Week 1</a>
+        <a class="dropdown-item" href="../02/index.html">Week 2</a>
+        <a class="dropdown-item" href="../03/index.html">Week 3</a>
+        <a class="dropdown-item" href="../04/index.html">Week 4</a>
+        <a class="dropdown-item" href="../05/index.html">Week 5</a>
+        <a class="dropdown-item" href="../06/index.html">Week 6</a>
+        <a class="dropdown-item" href="../07/index.html">Week 7</a>
+        <a class="dropdown-item" href="../08/index.html">Week 8</a>
+        <a class="dropdown-item" href="../09/index.html">Week 9</a>
+        <a class="dropdown-item" href="../10/index.html">Week 10</a>
+        <a class="dropdown-item" href="../11/index.html">Week 11</a>
+        <a class="dropdown-item" href="../12/index.html">Week 12</a>
+        <a class="dropdown-item" href="../13/index.html">Week 13</a>
+        <a class="dropdown-item" href="../14/index.html">Week 14</a>
+        <a class="dropdown-item" href="../FinalProject/index.html">Final Project</a>
+      </div>
+    </ul>
   </div>
 </nav>
+
 
 <body>
 
@@ -23,13 +58,16 @@
 <xmp style="display:none;">
 <br> 
 
-#### Week 1: Introduction 
+#### Week 7: Electronic Output Devices
 
 Here is an image: 
 
-![image of embroidery](./sew.png)
+<img src="./07.png" 
+     width="100" 
+     height="100" />
 
-And here is a	[link](../index.html).
+And here is a [link](../index.html).
+
 
 </xmp>
 </body>
