--- a/About/about.html
+++ b/About/about.html
@@ -65,7 +65,7 @@ body {border: 20px; darkblue; background-color: lightseagreen;}
 
 <p>Outside of school, I love practicing other languages such as Spanish and French, exploring good Asian cuisine in Boston and hiking. </p>
 
-<img src="./About/about.png" 
+<img src="../About/about.png" 
      width="300" 
      height="300" class="center" />
 
