--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -62,6 +62,8 @@ body {background-color: rgb(232, 245, 233);}
 <xmp style="display:none;">
 <br> 
 
+Objective 
+
 To build a fully functioning and sustainable water system that could theoretically pump and purify clean drinking water from a groundwater well. This system would include: a water pump, a filter to purify the water, and a float switch that would turn off the pump if it detected water levels that were too low in order to avoid drying out the well. 
 
 Why:
@@ -71,7 +73,7 @@ Many water systems costs thousands of dollars for material alone (especially the
 Overall Design of system
 
 <div class = "center">
-  <img src="../01_intro/design1.jpeg" 
+  <img src="../01_intro/design1.jpg" 
      width="300" 
      height="300" />
 </div>
@@ -94,7 +96,7 @@ Finally, there are numerous reports detailing “DIY” wilderness  filters usin
 
 
 <div class = "center">
-  <img src="../01_intro/filter.jpeg" 
+  <img src="../01_intro/filter.jpg" 
      width="300" 
      height="300" />
 </div>
@@ -120,7 +122,7 @@ This device would involve an internal filter containing activated carbon and oth
 I would like to investigate whether I could make the panels from scratch as well but this may be completely out of scope and require a unrealistically in depth understanding of photovoltaics. 
 
 <div class = "center">
-  <img src="../01_intro/design2.jpeg" 
+  <img src="../01_intro/design2.jpg" 
      width="300" 
      height="300" />
 </div>
