--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -74,12 +74,12 @@ Many water systems costs thousands of dollars for material alone (especially the
 
 <div class = "center">
   <img src="../01_intro/design1.jpg" 
-     width ="200" height="300"/>
+     width ="300" height="200"/>
 </div>
 
 <b>Part 1: The water pump</b>
 
-According to [this](https://www.wikihow.com/Build-a-Water-Pump) wikihow  article, a water pump can be constructed quite easily using PVC piping, a t-socket, a metal sheet, a motor, some plastic and a 12V battery pack. I believe that this same design can be mimicked and elevated in the PS 70 lab. 
+According to [this](https://www.wikihow.com/Build-a-Water-Pump) (Wikihow, 2022) wikihow  article, a water pump can be constructed quite easily using PVC piping, a t-socket, a metal sheet, a motor, some plastic and a 12V battery pack. I believe that this same design can be mimicked and elevated in the PS 70 lab. 
 
 Firstly, instead of using PVC piping I would like to investigate the possibility of 3D printing the exact shape required for the pump, including specific placeholders for the motor and wiring. Additionally I would like to use laser cutting to create a more exact motor, and use more realistic material such as cast steel or bronze for the propellor portion of the motor.
 
@@ -91,22 +91,22 @@ While the majority of water filters are placed in the homes of communities rathe
 
 I have considered both the possibilities of 3D printing and using molds to create the base water filter, and I am unsure which would be more suitable at the moment with my limited knowledge. I would also like to investigate the use of activated carbon in my filters, and how I could maximize the use of tools to produce this activate carbon in-house. Normally, activated carbon is made by  “being placed in a tank without oxygen and subjecting it to extremely high temperatures, 600-900 degrees Celsius .” so I am unsure if there is a feasible, safe way to reproduce this in the lab. 
 
-Finally, there are numerous reports detailing “DIY” wilderness  filters using a mixture of sand, gravel, and cloth to natural filter out the water. I would like to investigate ways in which I can substitute these materials for more efficient, yet still cost-effective materials. The goal would be to get as close to “real” or commercially sold water filters, such as the sawyers water filtration kit (shown below):
+Finally, there are numerous reports detailing “DIY” wilderness  filters (Mother earth news, n.d) using a mixture of sand, gravel, and cloth to natural filter out the water. I would like to investigate ways in which I can substitute these materials for more efficient, yet still cost-effective materials. The goal would be to get as close to “real” or commercially sold water filters, such as the sawyers water filtration kit (shown below):
 
 <u> Figure 2: Sawyer filtration membranes </u>
 
 <div class = "center">
   <img src="../01_intro/filter.jpg" 
-      />
+      width="300" height="300"/>
 </div>
 
-These filters are comprised of tiny hollow fiber membranes which allow water to enter through micropores but helps filter out 99.9% of bacteria and 100% of microplastics. 
+These filters are comprised of tiny hollow fiber membranes which allow water to enter through micropores but helps filter out most bacteria and 100% of microplastics (Sawyer Products, n.d). 
 
 <b>Part 3: Float switch </b>
 
 The final component to my planned water system would be to program and design a float switch. The float switch would directly turn off the pump when water levels dropped below a pre-determined safety level. This would help the well from running dry, as well as preventing any damage to the pump.
 
-In order to create a float switch from scratch I would need to incorporate multiple different factors. Firstly, I will need to incorporate the necessary Computer Programming to allow the float switch to carry out its desired function. Secondly, I will need to design a way in which the float switch sensor can be connected to my code and relay the monitoring information. I would like to explore whether it would be possible to do this through Bluetooth rather than the traditional electrical wiring. Another potential possibility would be to incorporate microcontrollers into the operation of my float switch, as this  site demonstrates.
+In order to create a float switch from scratch I would need to incorporate multiple different factors. Firstly, I will need to incorporate the necessary Computer Programming to allow the float switch to carry out its desired function. Secondly, I will need to design a way in which the float switch sensor can be connected to my code and relay the monitoring information. I would like to explore whether it would be possible to do this through Bluetooth rather than the traditional electrical wiring. Another potential possibility would be to incorporate microcontrollers into the operation of my float switch, as [this](https://www.instructables.com/PP-Float-Switch-Tutorial/)  site demonstrates (Mybotic and Instructables, 2018).
 
 <b>Part 4: Electrical Wiring </b>
 
@@ -126,6 +126,16 @@ I would like to investigate whether I could make the panels from scratch as well
 </div>
 
 <u> References </u>
+
+<i>wikiHow. (2022, January 31). Simple ways to build a water pump: 12 steps (with pictures). wikiHow. Retrieved from https://www.wikihow.com/Build-a-Water-Pump 
+
+How to make a DIY water filtration system using sand or gravel – mother earth news. Mother Earth News – The Original Guide To Living Wisely. (2022, January 21). Retrieved from https://www.motherearthnews.com/diy/how-to-make-a-diy-water-filtration-system/ 
+
+Water filtration. Sawyer Products. (n.d.). Retrieved from https://www.sawyer.com/product-categories/water-filtration 
+Activated carbon & charcoal frequently asked questions: FAQ page. General Carbon Corporation. (2022, June 2). Retrieved from https://generalcarbon.com/facts-about-activated-carbon/
+activated-carbon-faq/#:~:text=Activated%20carbon%20is%20made%20by,from%20600%2D1200%20degrees%20Celsius. 
+
+Mybotic, & Instructables. (2018, July 15). PP float switch tutorial. Instructables. Retrieved from https://www.instructables.com/PP-Float-Switch-Tutorial/ </i>
 
 
 </xmp>
